Compat java 1.8, remove commandapi load, clear in the camera